style color edited

--- a/crypfolio/web/faces/settings.xhtml
+++ b/crypfolio/web/faces/settings.xhtml
@@ -167,7 +167,7 @@
                             <p:inputText id="settings-portfolio-link"
                                          value="#{userBacking.getPortfolioSharingLink()}"
                                          styleClass="form-control form-control-right noshadow"
-                                         style="border-radius:3px !important"
+                                         style="border-radius:3px !important; color: #0093e4; opacity: 0.8;"
                                          readonly="true" disabled="true"/>
 
                         </h:panelGrid>
