--- a/crypfolio/web/faces/item.xhtml
+++ b/crypfolio/web/faces/item.xhtml
@@ -290,6 +290,12 @@
                                 </p:column>
                             </p:row>
 
+                            <p:row>
+                                <p:column colspan="2">
+                                    <h:outputText styleClass="span-10px-height" style="height: 5px;"/>
+                                </p:column>
+                            </p:row>
+
                         </p:panelGrid>
 
                     </h:form>
