logo changed, mariadb added

--- a/crypfolio/web/faces/user.xhtml
+++ b/crypfolio/web/faces/user.xhtml
@@ -17,7 +17,7 @@
 
             <h:link outcome="/faces/user.xhtml">
 
-                <h:graphicImage name="images/logo_small.png" alt="Crypfolio :: a new crypto portfolio" width="192"
+                <h:graphicImage name="images/logo_small_mariadb.png" alt="Crypfolio :: a new crypto portfolio" width="192"
                                 height="43"/>
 
             </h:link>
