new logo, small edits

--- a/crypfolio-jsf-mongodb/web/faces/forgot-password.xhtml
+++ b/crypfolio-jsf-mongodb/web/faces/forgot-password.xhtml
@@ -19,7 +19,7 @@
             <p:growl id="growl" showDetail="false" life="15000"/>
 
             <h:form id="resetPasswordForm" rendered="#{empty param['code']}">
-                <!-- the form for the use case when user is not logged and want to reset you password -->
+                <!-- the form for the use case when user is not logged and wants to reset his password -->
 
                 <p:panel id="resetPasswordPanel" header="Reset Password" style="">
 
@@ -54,7 +54,7 @@
             </h:form>
 
             <h:form id="setNewPasswordForm" rendered="#{not empty param['code']}">
-                <!-- the form for use case when user passed by reset.password link and will set a new password -->
+                <!-- the form for use case when user passed by reset.password link and he will set a new password -->
 
                 <p:panel id="setNewPasswordPanel" header="Set New Password" style="">
 
